tests/paczka1/fuzzy1/76308441.err
Error in line 1: aABa A565 94,7
Error in line 8: VhoINslixeT A431 11,4
Error in line 15: VhoINslixeT A565 66,6
Error in line 16: aABa A33 78,2
Error in line 28: ojA A33 326,8
Error in line 35: ojA A431 21,1
